--- a/4_zadanie/css/style.css
+++ b/4_zadanie/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	width: 1282px;
+	width: 1000px;
 	margin: auto;
 	font-family: Tahoma;
 	background: url(../img/bg.jpg) repeat-x;
@@ -19,14 +19,14 @@ div.wrapper {
 
 /*HEADER*/
 
-div.header {
+header {
+	display: block;
 	background: #fff;
 	height: 175px;
 	position: relative;
 }
 
 div.logo {
-	float: left;
 	position: absolute;
 	top: 13px;
 }
@@ -102,10 +102,21 @@ div.topmenu img {
 	padding-left: 10px;
 }
 
+/*
+
+.menu {
+     display: table; position: relative;
+     width: 100%; height: 50px;
+}
+.menu a {
+    display: table-cell;
+    text-align: center; vertical-align: middle;
+}*/
+
 div.topmenu ul {
   	margin: 0 auto;
     padding-left: 0px;
-    padding-right: 40px;
+    padding-right: 0px;
 }
 
 ul:after {
@@ -119,7 +130,7 @@ ul.menu > li {
     float: left;
     position: relative;
     margin: 0 auto;
-    padding-left: 70px;
+    padding-left: 30px;
     padding-right: 10px;
 }
 
@@ -139,10 +150,11 @@ ul.submenu {
     display: none;
     position: absolute;
     width: 150px;
-    top: 37px;
-    left: 70px;
+    top: 34px;
+    left: 30px;
     background-color: #343434;
     border: 1px solid #343434;
+    border-top: 1px solid black;
     box-shadow: 0 5px 10px #000000;/*<сдвиг по x> <сдвиг по y> <радиус размытия> <растяжение> <цвет>*/
 }
 
@@ -244,12 +256,13 @@ div.wrapperrc h5 {
 }
 
 /*FOOTER*/
-.footer {
+footer {
+	display: block;
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
-div.footer p {
+footer p {
 	text-align: center;
 	font-size: 12px;
 	color: #fff;
