--- a/3_zadanie/css/style.css
+++ b/3_zadanie/css/style.css
@@ -63,16 +63,16 @@ div .topmenu li a:hover {
 
 .sidebar li {
   border-bottom: 1px solid #c8c8c8;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left:24px;
-}
+ }
 
 .sidebar li:last-child {
   border-bottom: none;
 }
 
 div.sidebar a {
+  display: block;
+  line-height: 40px;
+  padding-left:24px;
   text-decoration: none; 
   color: #656363;
 }
