--- a/5_zadanie/cadastre/css/reset.css
+++ b/5_zadanie/cadastre/css/reset.css
@@ -4,8 +4,7 @@ a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
+dl, dt, dd, ol, ul, li, form, label,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
@@ -39,11 +38,6 @@ q:before, q:after {
 /* Don't kill focus outline for keyboard users: http://24ways.org/2009/dont-lose-your-focus */
 a:hover, a:active {
     outline: none;
-}
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
 }
 
 a {
