--- a/6_zadanie/css/style.css
+++ b/6_zadanie/css/style.css
@@ -115,6 +115,7 @@ div.topmenu ul {
     padding-left: 0;
     padding-right: 0;
     padding-top: 4px;
+    padding-bottom: 4px;
     height: 24px;
 }
 
@@ -125,8 +126,9 @@ div.topmenu ul > li {
 
 div.topmenu ul > li > a {
     display: block;
-    padding: 12px;
-    line-height: 10px;
+    padding-left: 12px;
+    padding-right: 12px;
+    line-height: 24px;
     color: #a2acb0;
     text-decoration: none;
 }
@@ -148,9 +150,17 @@ div.basket p {
 }
 
 div.basket a {
-	line-height: 26px;
+	line-height: 34px;
 	color: #0e5789;
+	padding-right: 14px;
 }
+
+div.basket img {
+	padding-top: 7px;
+	padding-right: 7px;
+	float: left;
+}
+
 /*CENTRAL FORMS*/
 
 div.forms {
@@ -222,4 +232,129 @@ aside.right {
 	background: #fff;
 	padding-bottom: 20000px;
 	margin-bottom: -20000px;
+}
+
+/*ASIDE_LEFT*/
+
+div.catalog {
+	width: 180px;
+	height: 25px;
+	border-radius: 20px;
+    border: 1px solid #b6b6b7;
+    font-size: 13px;
+	color: #114165;
+	line-height: 25px;
+}
+
+div.img {
+	float: left;
+	height: 20px;
+	width: 20px;
+	border-radius: 10px;
+	background: linear-gradient(to bottom, #25617b, #0d3458);
+}
+
+div.img img {
+}
+
+div.radio {
+	width: 149px;
+	height: 25px;
+	margin-top: 14px;
+	border-radius: 20px;
+    border: 1px solid #b6b6b7;
+}
+
+label {
+	cursor: pointer;
+	position: relative;
+	padding-left: 25px;
+	line-height: 26px;
+	font-size: 14px;
+}
+
+input[type=radio] {
+	display: none;
+}
+
+label:before {
+	content: "";
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	margin-right: 10px;
+	position: absolute;
+	top: 1px;
+	left: 3px;
+	bottom: 0;
+	background: linear-gradient(to bottom, #25617b, #0d3458);
+}
+
+.radio label:before {
+	border-radius: 10px;
+}
+
+input[type=radio]:checked + label:before {
+	content: "\2022";
+	color: #fff;
+	font-size: 30px;
+	text-align: center;
+	line-height: 17px;
+}
+
+div.name {
+	width: 149px;
+	height: 86px;
+	padding-left: 35px;
+	padding-top: 8px;
+}
+
+div.name li:before {
+	content: "";
+	display: inline-block;
+	width: 6px;
+	height: 6px;
+    background-color: #fff;
+    border: 1px solid #465961;
+    border-radius: 3px;
+    margin-right: 5px;
+    
+}
+
+div.name a {
+	font-size: 13px;
+	color: #465961;
+	line-height: 25px;
+}
+
+div.name a:hover {
+	line-height: 25px;
+	text-decoration: underline;
+	font-family: "Arial";
+	font-style: bold;
+	font-size: 14px;
+	color: #0c3256;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*FOOTER*/
+
+div.logo {
+	width: 908px;
+	height: 60px;
+	margin-top: 30px;
+}
+
+div.logo img {
+	display: block;
+    margin: 0 auto;
 }
