--- a/6_zadanie/css/style.css
+++ b/6_zadanie/css/style.css
@@ -220,13 +220,13 @@ div.bodycontent {
 	height: 627px;
 	background: #e4e7e8;
 	border-radius: 10px;
-	margin-left: 191px;
 	margin-right: 9px;
+	float: left;
 }
 
 aside.right {
 	width: 182px;
-	float: right;
+	float: left;
 	background: #fff;
 }
 
@@ -248,9 +248,14 @@ div.img {
 	width: 20px;
 	border-radius: 10px;
 	background: linear-gradient(to bottom, #25617b, #0d3458);
+	margin-left: 3px;
+    margin-top: 3px;
+    margin-right: 5px;
 }
 
 div.img img {
+	padding-left: 4px;
+
 }
 
 div.radio {
@@ -378,8 +383,128 @@ div.cells p.price {
 /*ASIDERIGHT*/
 
 aside.right {
-	float: right;
+	float: left;
 }
+
+
+
+
+
+
+
+
+
+
+div.catalog {
+	width: 180px;
+	height: 25px;
+	border-radius: 20px;
+    border: 1px solid #b6b6b7;
+    font-size: 13px;
+	color: #114165;
+	line-height: 25px;
+}
+
+div.img {
+	float: left;
+	height: 20px;
+	width: 20px;
+	border-radius: 10px;
+	background: linear-gradient(to bottom, #25617b, #0d3458);
+	margin-left: 3px;
+    margin-top: 3px;
+    margin-right: 5px;
+}
+
+div.img img {
+	padding-left: 4px;
+
+}
+
+div.radio {
+	width: 149px;
+	height: 25px;
+	margin-top: 14px;
+	border-radius: 20px;
+    border: 1px solid #b6b6b7;
+}
+
+label {
+	cursor: pointer;
+	position: relative;
+	padding-left: 25px;
+	line-height: 26px;
+	font-size: 14px;
+}
+
+input[type=radio] {
+	display: none;
+}
+
+label:before {
+	content: "";
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	margin-right: 10px;
+	position: absolute;
+	top: 1px;
+	left: 3px;
+	bottom: 0;
+	background: linear-gradient(to bottom, #25617b, #0d3458);
+}
+
+.radio label:before {
+	border-radius: 10px;
+}
+
+input[type=radio]:checked + label:before {
+	content: "\2022";
+	color: #fff;
+	font-size: 30px;
+	text-align: center;
+	line-height: 17px;
+}
+
+div.name {
+	width: 149px;
+	height: 86px;
+	padding-left: 35px;
+	padding-top: 8px;
+}
+
+div.name li:before {
+	content: "";
+	display: inline-block;
+	width: 6px;
+	height: 6px;
+    background-color: #fff;
+    border: 1px solid #465961;
+    border-radius: 3px;
+    margin-right: 5px;
+    
+}
+
+div.name a {
+	font-size: 13px;
+	color: #465961;
+	line-height: 25px;
+}
+
+div.name a:hover {
+	line-height: 25px;
+	text-decoration: underline;
+	font-family: "Arial";
+	font-style: bold;
+	font-size: 14px;
+	color: #0c3256;
+}
+
+
+
+
+
+
 
 
 /*FOOTER*/
