--- a/6_zadanie/css/style.css
+++ b/6_zadanie/css/style.css
@@ -213,6 +213,7 @@ aside.left {
 	float: left;
 	text-overflow: clip;
 	background: #fff;
+	margin-right: 9px;
 }
 
 div.bodycontent {
@@ -240,6 +241,7 @@ div.catalog {
     font-size: 13px;
 	color: #114165;
 	line-height: 25px;
+	margin-bottom: 13px;
 }
 
 div.img {
@@ -251,61 +253,48 @@ div.img {
 	margin-left: 3px;
     margin-top: 3px;
     margin-right: 5px;
-}
+} 
 
-div.img img {
-	padding-left: 4px;
-
+div.img a.iconbrand {
+	display: block;
+	width: 180px;
+	padding-left: 23px;
+	font-size: 13px;
+	color: #114165;
+	background: url(../img/iconbrand.png) 4px 2px no-repeat;
 }
 
 div.radio {
-	width: 149px;
+	width: 148px;
 	height: 25px;
-	margin-top: 14px;
 	border-radius: 20px;
     border: 1px solid #b6b6b7;
+    font-size: 14px;
+	color: #114165;
+	line-height: 25px;
 }
 
-label {
-	cursor: pointer;
-	position: relative;
-	padding-left: 25px;
-	line-height: 26px;
-	font-size: 14px;
-}
-
-input[type=radio] {
-	display: none;
-}
-
-label:before {
-	content: "";
-	display: inline-block;
-	width: 20px;
-	height: 20px;
-	margin-right: 10px;
-	position: absolute;
-	top: 1px;
-	left: 3px;
-	bottom: 0;
-	background: linear-gradient(to bottom, #25617b, #0d3458);
-}
-
-.radio label:before {
+div.imgradio {
+	float: left;
+	width: 148px;
+	height: 25px;
 	border-radius: 10px;
-}
+	margin-left: 4px;
+    margin-top: 1px;
+} 
 
-input[type=radio]:checked + label:before {
-	content: "\2022";
-	color: #fff;
-	font-size: 30px;
-	text-align: center;
-	line-height: 17px;
+div.imgradio>a.radio {
+	display: block;
+	width: 115px;
+	padding-left: 25px;
+	font-size: 13px;
+	color: #114165;
+	background: url(../img/radio.png) 0 0 no-repeat;
 }
 
 div.name {
 	width: 149px;
-	height: 86px;
+	height: 100px;
 	padding-left: 35px;
 	padding-top: 8px;
 }
@@ -333,6 +322,7 @@ div.name a:hover {
 	text-decoration: underline;
 	font-family: "Arial";
 	font-style: bold;
+	font-style: italic;
 	font-size: 14px;
 	color: #0c3256;
 }
@@ -390,115 +380,6 @@ aside.right {
 
 
 
-
-
-
-
-
-div.catalog {
-	width: 180px;
-	height: 25px;
-	border-radius: 20px;
-    border: 1px solid #b6b6b7;
-    font-size: 13px;
-	color: #114165;
-	line-height: 25px;
-}
-
-div.img {
-	float: left;
-	height: 20px;
-	width: 20px;
-	border-radius: 10px;
-	background: linear-gradient(to bottom, #25617b, #0d3458);
-	margin-left: 3px;
-    margin-top: 3px;
-    margin-right: 5px;
-}
-
-div.img img {
-	padding-left: 4px;
-
-}
-
-div.radio {
-	width: 149px;
-	height: 25px;
-	margin-top: 14px;
-	border-radius: 20px;
-    border: 1px solid #b6b6b7;
-}
-
-label {
-	cursor: pointer;
-	position: relative;
-	padding-left: 25px;
-	line-height: 26px;
-	font-size: 14px;
-}
-
-input[type=radio] {
-	display: none;
-}
-
-label:before {
-	content: "";
-	display: inline-block;
-	width: 20px;
-	height: 20px;
-	margin-right: 10px;
-	position: absolute;
-	top: 1px;
-	left: 3px;
-	bottom: 0;
-	background: linear-gradient(to bottom, #25617b, #0d3458);
-}
-
-.radio label:before {
-	border-radius: 10px;
-}
-
-input[type=radio]:checked + label:before {
-	content: "\2022";
-	color: #fff;
-	font-size: 30px;
-	text-align: center;
-	line-height: 17px;
-}
-
-div.name {
-	width: 149px;
-	height: 86px;
-	padding-left: 35px;
-	padding-top: 8px;
-}
-
-div.name li:before {
-	content: "";
-	display: inline-block;
-	width: 6px;
-	height: 6px;
-    background-color: #fff;
-    border: 1px solid #465961;
-    border-radius: 3px;
-    margin-right: 5px;
-    
-}
-
-div.name a {
-	font-size: 13px;
-	color: #465961;
-	line-height: 25px;
-}
-
-div.name a:hover {
-	line-height: 25px;
-	text-decoration: underline;
-	font-family: "Arial";
-	font-style: bold;
-	font-size: 14px;
-	color: #0c3256;
-}
 
 
 
