--- a/7-8_homework/css/style.css
+++ b/7-8_homework/css/style.css
@@ -53,10 +53,16 @@ body {
     font-family: 'League Gothic Condensed', Arial, Tahoma, sans-serif;
 }
 
+header {
+	height: 547px;
+	width: 100%;
+}
+
 .wrapper {
 	margin: 0 auto;
-	background: url(../img/bg320.png) 0 0 no-repeat;
-	width: 100%
+	background: url(../img/bgheader.png) 0 0 no-repeat;
+	width: 100%;
+	height: 
 }
 
 .header__logo {
@@ -68,33 +74,97 @@ body {
 	color: #fff;	
 	}
 
-	a.header__logo:after {
+a.header__logo:after {
 	content: "ER";
 	background: linear-gradient(to bottom, #734f82, #34263b);
 	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
 	}
 
-	.menu__button {
+.menu__button {
 	display: block;
 	margin: 0 auto;
 	text-align: center;
 	width: 47px;
-	height: 45px;
 	margin-top: 40px;
 	margin-bottom: 4px;
 	padding-top: 10px;
 	padding-bottom: 2px;
 	color: #fff;
 	font-size: 24px;
+	text-transform: uppercase;
 	border-bottom: 2px solid #edbfff;
 	color: #fff;
-	
-	}
+	z-index: 5;
+}
 
-	.menu__submenu {
-		display: none;
-	}
+.menu__submenu {
+	display: none;
+	transition: all 0.2s;
+}
+
+.slider {
+	width: 325px;
+	height: 150px;
+	margin: 0 auto;
+	margin-top: 125px;
+}
+
+.slider__arrowleft {
+	float: left;
+	margin-right: 45px;
+}
+
+.slider a {
+	display: block;
+}
+
+h1 {
+	font-size: 36px;
+	color: #fff;
+	text-align: left;
+	text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	float: left;
+}
+
+h2 {
+	font-size: 18px;
+	text-align: left;
+	margin-top: 2px;
+	color: #edbfff;
+	text-transform: uppercase;
+	float: left;
+}
+
+.slider__arrowright {
+	float: right;	
+}
+
+.pagination {
+	clear: both;
+	width: 90px;
+	height: 25px;
+	margin: 0 auto;
+	margin-top: 70px;
+}
+
+.pagination__slide {
+	width: 16px;
+	height: 16px;
+	border-radius: 8px;
+	background-color: #65606b;
+	float: left;
+	margin-left: 5px;
+}
+
+.pagination__slide:active {
+	box-shadow: inset 13px 13px 13px #fff;
+}
+
+
+	
+
+
 
 
 
