--- a/7-8_homework/css/media_queries_480.css
+++ b/7-8_homework/css/media_queries_480.css
@@ -1,10 +1,10 @@
 @media only screen and (min-width: 480px) {
 	.boxshadow {
 		position: absolute;
-		margin-top: 203px;
+		margin-top: 19%;
 		width: 100%;
-		height: 245px;
-		box-shadow: inset 300px 200px 100px rgba(158, 153, 154, .5);
+		height: 30%;
+		background-color: rgba(158, 153, 154, .5);
 		z-index: 1;
 	}
 }
