--- a/7-8_homework/css/style.css
+++ b/7-8_homework/css/style.css
@@ -56,13 +56,15 @@ body {
 header {
 	height: 547px;
 	width: 100%;
+	height: 15%;
 }
 
 .wrapper {
 	margin: 0 auto;
 	background: url(../img/bgheader.png) 0 0 no-repeat;
-	width: 100%;
-	height: 
+	background-size: 100%;
+	position: relative;
+	height: 15%;
 }
 
 .header__logo {
@@ -104,10 +106,12 @@ a.header__logo:after {
 }
 
 .slider {
-	width: 325px;
+	position: relative;
+	width: 260px;
 	height: 150px;
 	margin: 0 auto;
-	margin-top: 125px;
+	margin-top: 120px;
+	z-index: 5;
 }
 
 .slider__arrowleft {
@@ -137,15 +141,14 @@ h2 {
 }
 
 .slider__arrowright {
-	float: right;	
+	position: absolute;
+	right: 0;
 }
 
 .pagination {
-	clear: both;
 	width: 90px;
-	height: 25px;
 	margin: 0 auto;
-	margin-top: 70px;
+	padding-top: 100px;
 }
 
 .pagination__slide {
@@ -157,9 +160,47 @@ h2 {
 	margin-left: 5px;
 }
 
-.pagination__slide:active {
-	box-shadow: inset 13px 13px 13px #fff;
+.wrapper-about {
+	border-top: 1px solid #33253a;
+	border-bottom: 1px solid #1d2f37;
+	background: linear-gradient (to bottom, #765284, #37293e);
+	height: 20%;
+	position: relative;
 }
+
+.about {
+	min-width: 960px;
+	height: auto;
+	margin-left: 35%;
+	position: absolute;
+}
+
+.about__company {
+	float: left;
+	width: 10%;
+	background: linear-gradient(to bottom, #765284, #37293e);
+	padding: 25px ;
+}
+
+.about__company img {
+	float: left;
+	width: 23px;
+	height: 25px;
+}
+
+.about__company h1 {
+	font-size: 16px;
+	padding-left: 20px;
+}
+
+.about__company p {
+	font-family:; "Open Sans", Tahoma, Arial, sans-serif;
+	font-size: 16px;
+	color: #fff;
+	padding-left: 40px;
+}
+
+
 
 
 	
